# labs

./: Readme.md
es6/: index.html
es6/src/: greeter.js
ff92/: CMakeLists.txt  TODO.txt
ff92/ff92/: BURLA.TXT  CHOCOBO.FLI  DANSTE1.FLC  MALOS.PSJ  OBJETOS.OTS  PANT001.ZKT  PANT002.ZKT  PANT003.ZKT  README.now  SAVE0000.ZKT  SAVE0003.ZKT  SEPHMASK.FLI  TRSOFT.FLI  TXSWIN.FLI  YODA.FLI  conthank.cdt  cosita2.txt  cosita3.txt  creditos.cdt  dialog1.txt  feliz01.txt  ff92.gdt  ff92.gpr  ff92.pif  file_id.diz  leeme.ya  maridi2.txt  palette.PAL  pant004.zkt  pista01.txt  save0000.plr  save0001.plr  save0001.zkt  save0002.zkt  save0003.plr  save0004.plr  save0004.zkt  save0005.plr  save0005.zkt  save0006.plr  (+8 more)
ff92/ff92/assets/img/animations/: BDKSOFT.FLI  BDKWIN.FLI  FINAL.FLI  ILUCHA.FLI  IVICT.FLI  MUETO.FLI
ff92/ff92/assets/text/: BURLA.TXT  aviso01.txt  aviso02.txt  cosita1.txt  dialog2.txt  esta01.txt  esta02.txt  feliz02.txt  maridi1.txt  nop.txt  pista02.txt  sma.txt  zupecar.txt
ff92/ff92/assets/text/credits/: bdkthank.cdt  conthank.cdt  musics.cdt
ff92/ff92/docs/: manual.doc  manual.odt  program1.doc  program1.odt
ff92/ff92/source/: FF92.C  TADLCUAD.C  TADLCUAD.H  TADP.H  TADSALA.C  TadObjet.c  TadObjet.h  combate.c  combate.h  fatal.h  files.c  files.h  list.c  list.h  mapacol.c  mapacol.h  recuadro.c  recuadro.h  tadmalo.c  tadmalo.h  tadp.c  tadsala.h  videos.c  videos.h
ff92/ff92/src/: TADLCUAD.C  TADSALA.C  TadObjet.h  Todo.txt  combate.c  combate.h  fatal.h  files.c  files.h  list.c  list.h  mapacol.h  recuadro.h  tadmalo.h  tadp.c  videos.c  videos.h
ff92/install/: install.c
requirejs/: .jshintrc  Readme.md  TODO.txt  index.html
requirejs/src/: main.js  tool.js  user.js
requirejs/test/: SpecRunner.html
requirejs/test/spec/: main.js
