cmake_minimum_required(VERSION 2.8.4)
project(ff92)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    ff92/src/combate.c
    ff92/src/combate.h
    ff92/src/fatal.h
    ff92/src/FF92.C
    ff92/src/files.c
    ff92/src/files.h
    ff92/src/list.c
    ff92/src/list.h
    ff92/src/mapacol.c
    ff92/src/mapacol.h
    ff92/src/recuadro.c
    ff92/src/recuadro.h
    ff92/src/TADLCUAD.C
    ff92/src/TADLCUAD.H
    ff92/src/tadmalo.c
    ff92/src/tadmalo.h
    ff92/src/TadObjet.c
    ff92/src/TadObjet.h
    ff92/src/tadp.c
    ff92/src/TADP.H
    ff92/src/TADSALA.C
    ff92/src/tadsala.h
    ff92/src/videos.c
    ff92/src/videos.h
    ff92/assets/img/bitmap/ARAC0000.BMP
    ff92/assets/img/bitmap/ARAC0001.BMP
    ff92/assets/img/bitmap/ARAC0002.BMP
    ff92/assets/img/bitmap/ARAC0003.BMP
    ff92/assets/img/bitmap/ARAC0004.BMP
    ff92/assets/img/bitmap/ARAC0005.BMP
    ff92/assets/img/bitmap/ARAC0006.BMP
    ff92/assets/audio/arana.mid
    ff92/assets/img/bitmap/ARBOL.BMP
    ff92/assets/img/bitmap/ARMADURA.BMP
    ff92/assets/text/aviso01.txt
    ff92/assets/text/aviso02.txt
    ff92/assets/img/bitmap/bahamut.bmp
    ff92/assets/img/bitmap/BALC0000.BMP
    ff92/assets/img/bitmap/BALC0001.BMP
    ff92/assets/img/bitmap/BALC0002.BMP
    ff92/assets/img/bitmap/BALC0003.BMP
    ff92/assets/img/bitmap/BALC0004.BMP
    ff92/assets/img/bitmap/BALC0005.BMP
    ff92/assets/img/bitmap/BALC0006.BMP
    ff92/assets/audio/balrog.mid
    ff92/assets/img/bitmap/BANDUVE.BMP
    ff92/assets/audio/batwin.mid
    ff92/assets/img/bitmap/BDKC0000.BMP
    ff92/assets/img/bitmap/BDKC0001.BMP
    ff92/assets/img/bitmap/BDKC0002.BMP
    ff92/assets/img/bitmap/BDKC0003.BMP
    ff92/assets/img/bitmap/BDKC0004.BMP
    ff92/assets/img/bitmap/BDKC0005.BMP
    ff92/assets/img/bitmap/BDKC0006.BMP
    ff92/assets/img/bitmap/BDKC0007.BMP
    ff92/assets/img/bitmap/BDKD0000.BMP
    ff92/assets/img/bitmap/BDKD0001.BMP
    ff92/assets/img/bitmap/BDKD0002.BMP
    ff92/assets/img/bitmap/BDKD0003.BMP
    ff92/assets/img/bitmap/BDKD0004.BMP
    ff92/assets/img/bitmap/BDKD0005.BMP
    ff92/assets/img/bitmap/BDKD0006.BMP
    ff92/assets/img/bitmap/BDKL0000.BMP
    ff92/assets/img/bitmap/BDKL0001.BMP
    ff92/assets/img/bitmap/BDKL0002.BMP
    ff92/assets/img/bitmap/BDKL0003.BMP
    ff92/assets/img/bitmap/BDKL0004.BMP
    ff92/assets/img/bitmap/BDKL0005.BMP
    ff92/assets/img/bitmap/BDKL0006.BMP
    ff92/assets/img/bitmap/BDKR0000.BMP
    ff92/assets/img/bitmap/BDKR0001.BMP
    ff92/assets/img/bitmap/BDKR0002.BMP
    ff92/assets/img/bitmap/BDKR0003.BMP
    ff92/assets/img/bitmap/BDKR0004.BMP
    ff92/assets/img/bitmap/BDKR0005.BMP
    ff92/assets/img/bitmap/BDKR0006.BMP
    ff92/assets/img/bitmap/BDKS0000.BMP
    ff92/assets/img/animations/BDKSOFT.FLI
    ff92/assets/text/credits/bdkthank.cdt
    ff92/assets/img/bitmap/BDKU0000.BMP
    ff92/assets/img/bitmap/BDKU0001.BMP
    ff92/assets/img/bitmap/BDKU0002.BMP
    ff92/assets/img/bitmap/BDKU0003.BMP
    ff92/assets/img/bitmap/BDKU0004.BMP
    ff92/assets/img/bitmap/BDKU0005.BMP
    ff92/assets/img/bitmap/BDKU0006.BMP
    ff92/assets/img/animations/BDKWIN.FLI
    ff92/assets/audio/bgtheme.mid
    ff92/assets/text/BURLA.TXT
    ff92/assets/img/bitmap/CABEYO.BMP
    ff92/assets/img/bitmap/CAMA.BMP
    ff92/assets/img/bitmap/caminida.BMP
    ff92/assets/img/bitmap/caminidr.BMP
    ff92/assets/img/bitmap/caminoad.BMP
    ff92/assets/img/bitmap/caminoid.BMP
    ff92/assets/img/bitmap/caminori.BMP
    ff92/assets/img/bitmap/caminot.BMP
    ff92/assets/img/bitmap/CAPD0000.BMP
    ff92/assets/img/bitmap/CAPL0000.BMP
    ff92/assets/img/bitmap/CAPR0000.BMP
    ff92/assets/img/bitmap/CAPU0000.BMP
    ff92/assets/img/bitmap/carD0000.BMP
    ff92/assets/img/bitmap/carL0000.BMP
    ff92/assets/img/bitmap/carR0000.BMP
    ff92/assets/img/bitmap/carU0000.BMP
    ff92/assets/img/animations/CHOCOBO.FLI
    ff92/assets/text/credits/conthank.cdt
    ff92/assets/text/cosita1.txt
    ff92/assets/text/cosita2.txt
    ff92/assets/text/cosita3.txt
    ff92/assets/text/credits/creditos.cdt
    ff92/assets/audio/credits.mid
    ff92/assets/img/bitmap/CUCHILLO.BMP
    ff92/assets/img/bitmap/cueva01.BMP
    ff92/CWSDPMI.DOC
    ff92/CWSDPMI.EXE
    ff92/CWSDPR0.EXE
    ff92/CWSPARAM.DOC
    ff92/CWSPARAM.EXE
    ff92/DANSTE1.FLC
    ff92/assets/text/dialog1.txt
    ff92/assets/text/dialog2.txt
    ff92/assets/img/bitmap/eguD0000.BMP
    ff92/assets/img/bitmap/eguL0000.BMP
    ff92/assets/img/bitmap/eguR0000.BMP
    ff92/assets/img/bitmap/eguU0000.BMP
    ff92/assets/text/esta01.txt
    ff92/assets/text/esta02.txt
    ff92/assets/img/bitmap/farana.bmp
    ff92/assets/img/bitmap/fbalrog.bmp
    ff92/assets/img/bitmap/fbosquec.bmp
    ff92/assets/img/bitmap/fcasti.BMP
    ff92/assets/img/bitmap/fcpant03.BMP
    ff92/assets/text/feliz01.txt
    ff92/assets/text/feliz02.txt
    ff92/ff92.exe
    ff92/ff92.gdt
    ff92/ff92.gpr
    ff92/ff92.pif
    ff92/assets/img/bitmap/FF92LOGO.bmp
    ff92/file_id.diz
    ff92/assets/img/animations/FINAL.FLI
    ff92/assets/img/bitmap/FMADERA.BMP
    ff92/assets/img/bitmap/fmadera2.bmp
    ff92/assets/img/bitmap/fmalofin.bmp
    ff92/assets/img/bitmap/fondoce.BMP
    ff92/assets/img/bitmap/fondoci.BMP
    ff92/assets/img/bitmap/fuego.bmp
    ff92/assets/img/bitmap/fuego2.BMP
    ff92/assets/img/bitmap/fuente.bmp
    ff92/assets/img/bitmap/GMA0000.BMP
    ff92/assets/img/bitmap/GMA0001.BMP
    ff92/assets/img/bitmap/GMA0002.BMP
    ff92/assets/img/bitmap/GMA0003.BMP
    ff92/assets/img/bitmap/GMA0004.BMP
    ff92/assets/img/bitmap/GMA0005.BMP
    ff92/assets/img/bitmap/GMA0006.BMP
    ff92/assets/img/bitmap/gmac0000.bmp
    ff92/assets/img/bitmap/gmac0001.bmp
    ff92/assets/img/bitmap/gmac0002.bmp
    ff92/assets/img/bitmap/gmac0003.bmp
    ff92/assets/img/bitmap/gmac0004.bmp
    ff92/assets/img/bitmap/gmac0005.bmp
    ff92/assets/img/bitmap/gmac0006.bmp
    ff92/assets/img/bitmap/hierba01.BMP
    ff92/assets/img/bitmap/HUND0000.BMP
    ff92/assets/img/bitmap/HUNL0000.BMP
    ff92/assets/img/bitmap/HUNR0000.BMP
    ff92/assets/img/bitmap/HUNU0000.BMP
    ff92/assets/img/animations/ILUCHA.FLI
    ff92/assets/audio/ILUCHA.MID
    ff92/assets/img/bitmap/IMPALED.BMP
    ff92/assets/img/animations/IVICT.FLI
    ff92/assets/audio/jefe01.mid
    ff92/README.now
    ff92/assets/img/bitmap/LLAVEA.BMP
    ff92/assets/audio/logo1.mid
    ff92/assets/audio/logo2.mid
    ff92/MALOS.PSJ
    ff92/assets/img/bitmap/MARD0000.BMP
    ff92/assets/text/maridi1.txt
    ff92/assets/text/maridi2.txt
    ff92/assets/img/bitmap/MARL0000.BMP
    ff92/assets/img/bitmap/MARR0000.BMP
    ff92/assets/img/bitmap/MARU0000.BMP
    ff92/assets/audio/menu.mid
    ff92/assets/img/bitmap/MESA.BMP
    ff92/assets/audio/mfin.mid
    ff92/assets/img/animations/MUETO.FLI
    ff92/assets/img/bitmap/MURC0000.BMP
    ff92/assets/img/bitmap/MURC0001.BMP
    ff92/assets/img/bitmap/MURC0002.BMP
    ff92/assets/img/bitmap/MURC0003.BMP
    ff92/assets/img/bitmap/MURC0004.BMP
    ff92/assets/img/bitmap/MURC0005.BMP
    ff92/assets/img/bitmap/MURC0006.BMP
    ff92/assets/text/credits/musics.cdt
    ff92/assets/text/nop.txt
    ff92/assets/img/bitmap/NOVA.BMP
    ff92/OBJETOS.OTS
    ff92/palette.PAL
    ff92/PANT001.ZKT
    ff92/PANT002.ZKT
    ff92/PANT003.ZKT
    ff92/pant004.zkt
    ff92/assets/img/bitmap/PERC0000.BMP
    ff92/assets/img/bitmap/PERC0001.BMP
    ff92/assets/img/bitmap/PERC0002.BMP
    ff92/assets/img/bitmap/PERC0003.BMP
    ff92/assets/img/bitmap/PERC0004.BMP
    ff92/assets/img/bitmap/PERC0005.BMP
    ff92/assets/img/bitmap/PERC0006.BMP
    ff92/assets/img/bitmap/pic0006.bmp
    ff92/assets/text/pista01.txt
    ff92/assets/text/pista02.txt
    ff92/assets/img/bitmap/plaza.bmp
    ff92/assets/img/bitmap/POCIONA.BMP
    ff92/assets/img/bitmap/POCIONR.BMP
    ff92/assets/img/bitmap/POCIONV.BMP
    ff92/assets/img/bitmap/Puebloc.bmp
    ff92/assets/img/bitmap/rayo.bmp
    ff92/assets/img/bitmap/ROCA01.BMP
    ff92/save0000.plr
    ff92/SAVE0000.ZKT
    ff92/save0001.plr
    ff92/save0001.zkt
    ff92/save0002.plr
    ff92/save0002.zkt
    ff92/save0003.plr
    ff92/SAVE0003.ZKT
    ff92/save0004.plr
    ff92/save0004.zkt
    ff92/save0005.plr
    ff92/save0005.zkt
    ff92/save0006.plr
    ff92/save0006.zkt
    ff92/save0007.plr
    ff92/save0007.zkt
    ff92/save0008.plr
    ff92/save0009.plr
    ff92/save0010.plr
    ff92/save0010.zkt
    ff92/save0011.plr
    ff92/save0012.plr
    ff92/save0013.plr
    ff92/SAVE0014.PLR
    ff92/saved.dat
    ff92/savedto0.exe
    ff92/assets/text/savedto0.txt
    ff92/assets/audio/scr001.mid
    ff92/assets/audio/scr002.mid
    ff92/assets/audio/scr003.mid
    ff92/assets/audio/scr004.mid
    ff92/assets/audio/scrc001.mid
    ff92/assets/audio/scrc002.mid
    ff92/assets/audio/scrc003.mid
    ff92/assets/img/bitmap/SEPC0000.BMP
    ff92/assets/img/bitmap/SEPC0001.BMP
    ff92/assets/img/bitmap/SEPC0002.BMP
    ff92/assets/img/bitmap/SEPC0003.BMP
    ff92/assets/img/bitmap/SEPC0004.BMP
    ff92/assets/img/bitmap/SEPC0005.BMP
    ff92/assets/img/bitmap/SEPC0006.BMP
    ff92/assets/img/animations/SEPHKIT.FLI
    ff92/assets/img/animations/SEPHMASK.FLI
    ff92/assets/img/bitmap/simD0000.BMP
    ff92/assets/img/bitmap/simL0000.BMP
    ff92/assets/img/bitmap/simR0000.BMP
    ff92/assets/img/bitmap/simU0000.BMP
    ff92/assets/img/bitmap/SISMO01.BMP
    ff92/assets/text/sma.txt
    ff92/assets/img/bitmap/tara1.BMP
    ff92/assets/img/bitmap/tara2.BMP
    ff92/assets/img/bitmap/TOAC0000.BMP
    ff92/assets/img/bitmap/TOAC0001.BMP
    ff92/assets/img/bitmap/TOAC0002.BMP
    ff92/assets/img/bitmap/TOAC0003.BMP
    ff92/assets/img/bitmap/TOAC0004.BMP
    ff92/assets/img/bitmap/TOAC0005.BMP
    ff92/assets/img/bitmap/TOAC0006.BMP
    ff92/assets/img/animations/TRSOFT.FLI
    ff92/assets/img/bitmap/TXSC0000.BMP
    ff92/assets/img/bitmap/TXSC0001.BMP
    ff92/assets/img/bitmap/TXSC0002.BMP
    ff92/assets/img/bitmap/TXSC0003.BMP
    ff92/assets/img/bitmap/TXSC0004.BMP
    ff92/assets/img/bitmap/TXSC0005.BMP
    ff92/assets/img/bitmap/TXSC0006.BMP
    ff92/assets/img/bitmap/TXSC0007.BMP
    ff92/assets/img/bitmap/TXSD0000.BMP
    ff92/assets/img/bitmap/TXSD0001.BMP
    ff92/assets/img/bitmap/TXSD0002.BMP
    ff92/assets/img/bitmap/TXSD0003.BMP
    ff92/assets/img/bitmap/TXSD0004.BMP
    ff92/assets/img/bitmap/TXSD0005.BMP
    ff92/assets/img/bitmap/TXSD0006.BMP
    ff92/assets/img/bitmap/TXSL0000.BMP
    ff92/assets/img/bitmap/TXSL0001.BMP
    ff92/assets/img/bitmap/TXSL0002.BMP
    ff92/assets/img/bitmap/TXSL0003.BMP
    ff92/assets/img/bitmap/TXSL0004.BMP
    ff92/assets/img/bitmap/TXSL0005.BMP
    ff92/assets/img/bitmap/TXSL0006.BMP
    ff92/assets/img/bitmap/TXSR0000.BMP
    ff92/assets/img/bitmap/TXSR0001.BMP
    ff92/assets/img/bitmap/TXSR0002.BMP
    ff92/assets/img/bitmap/TXSR0003.BMP
    ff92/assets/img/bitmap/TXSR0004.BMP
    ff92/assets/img/bitmap/TXSR0005.BMP
    ff92/assets/img/bitmap/TXSR0006.BMP
    ff92/assets/img/bitmap/TXSS0000.BMP
    ff92/assets/text/credits/txsthank.cdt
    ff92/assets/img/bitmap/TXSU0000.BMP
    ff92/assets/img/bitmap/TXSU0001.BMP
    ff92/assets/img/bitmap/TXSU0002.BMP
    ff92/assets/img/bitmap/TXSU0003.BMP
    ff92/assets/img/bitmap/TXSU0004.BMP
    ff92/assets/img/bitmap/TXSU0005.BMP
    ff92/assets/img/bitmap/TXSU0006.BMP
    ff92/assets/img/animations/TXSWIN.FLI
    ff92/assets/img/bitmap/UNIC.BMP
    ff92/assets/img/animations/YODA.FLI
    ff92/assets/img/bitmap/YODD0000.BMP
    ff92/assets/img/bitmap/YODL0000.BMP
    ff92/assets/img/bitmap/YODR0000.BMP
    ff92/assets/img/bitmap/YODU0000.BMP
    ff92/assets/text/zupecar.txt
    ff92/assets/text/zupecar2.txt
    install/ARA0000.BMP
    install/BALR0000.BMP
    install/FF92LOGO.bmp
    install/install.c
    install/portada.BMP
    install/SEPH0000.BMP)

add_executable(ff92 ${SOURCE_FILES})